# scipy-2025-demos

./: .gitignore  README.md
cuda-lavalamp/: CMakeLists.txt  pixi.toml
cuda-lavalamp/src/: wave.cu
mojo-sierpinsky/: pixi.toml  sierpinsky.mojo
pixi-crispy-doom/: CMakeLists.txt  README.md  crispy-doom-6.0.0-hbf21a9e_0.conda  get_freedoom_iwad.py  pixi.toml
pybind11-fireworks/: .gitignore  build.sh  demo.py  example.py  pixi.toml  pyproject.toml  setup.py
pybind11-fireworks/python/: bindings.cpp
pybind11-fireworks/src/: demo.cpp  fireworks.cpp  fireworks.hpp
python/: pixi.toml
python/recipe/: build.sh  recipe.yaml
